// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadialChart Check onClick events 1`] = `
<DocumentFragment>
  <div
    class="ChartContainer-container"
  >
    <div
      class="recharts-responsive-container"
      style="width: 400px; height: 400px;"
    >
      <div
        class="recharts-wrapper"
        role="region"
        style="position: relative; cursor: default; width: 400px; height: 400px;"
      >
        <svg
          class="recharts-surface"
          cx="50%"
          cy="50%"
          height="400"
          version="1.1"
          viewBox="0 0 400 400"
          width="400"
        >
          <title />
          <desc />
          <defs>
            <clippath
              id="recharts3-clip"
            >
              <rect
                height="390"
                width="390"
                x="5"
                y="5"
              />
            </clippath>
          </defs>
          <g
            class="recharts-layer recharts-polar-angle-axis"
          >
            <path
              class="recharts-polygon angleAxis"
              cx="200"
              cy="200"
              d="M200,5L314.6181241970323,42.241686096885246L385.45602067755493,139.74168609688525L385.45602067755493,260.25831390311475L314.6181241970323,357.75831390311475L200,395L85.38187580296776,357.75831390311475L14.543979322445068,260.25831390311475L14.54397932244504,139.74168609688527L85.38187580296771,42.241686096885275L199.99999999999997,5L200,5Z"
              fill="none"
              orientation="outer"
              radius="195"
              type="number"
            />
            <g
              class="recharts-layer recharts-polar-angle-axis-ticks"
            >
              <g
                class="recharts-layer recharts-polar-angle-axis-tick"
              >
                <line
                  class="angleAxis"
                  cx="200"
                  cy="200"
                  fill="none"
                  orientation="outer"
                  radius="195"
                  type="number"
                  x1="200"
                  x2="200"
                  y1="5"
                  y2="-3"
                />
              </g>
              <g
                class="recharts-layer recharts-polar-angle-axis-tick"
              >
                <line
                  class="angleAxis"
                  cx="200"
                  cy="200"
                  fill="none"
                  orientation="outer"
                  radius="195"
                  type="number"
                  x1="314.6181241970323"
                  x2="319.32040621537203"
                  y1="42.241686096885246"
                  y2="35.769550141885674"
                />
              </g>
              <g
                class="recharts-layer recharts-polar-angle-axis-tick"
              >
                <line
                  class="angleAxis"
                  cx="200"
                  cy="200"
                  fill="none"
                  orientation="outer"
                  radius="195"
                  type="number"
                  x1="385.45602067755493"
                  x2="393.06447280791616"
                  y1="139.74168609688525"
                  y2="137.26955014188567"
                />
              </g>
              <g
                class="recharts-layer recharts-polar-angle-axis-tick"
              >
                <line
                  class="angleAxis"
                  cx="200"
                  cy="200"
                  fill="none"
                  orientation="outer"
                  radius="195"
                  type="number"
                  x1="385.45602067755493"
                  x2="393.06447280791616"
                  y1="260.25831390311475"
                  y2="262.73044985811435"
                />
              </g>
              <g
                class="recharts-layer recharts-polar-angle-axis-tick"
              >
                <line
                  class="angleAxis"
                  cx="200"
                  cy="200"
                  fill="none"
                  orientation="outer"
                  radius="195"
                  type="number"
                  x1="314.6181241970323"
                  x2="319.32040621537203"
                  y1="357.75831390311475"
                  y2="364.2304498581143"
                />
              </g>
              <g
                class="recharts-layer recharts-polar-angle-axis-tick"
              >
                <line
                  class="angleAxis"
                  cx="200"
                  cy="200"
                  fill="none"
                  orientation="outer"
                  radius="195"
                  type="number"
                  x1="200"
                  x2="200"
                  y1="395"
                  y2="403"
                />
              </g>
              <g
                class="recharts-layer recharts-polar-angle-axis-tick"
              >
                <line
                  class="angleAxis"
                  cx="200"
                  cy="200"
                  fill="none"
                  orientation="outer"
                  radius="195"
                  type="number"
                  x1="85.38187580296776"
                  x2="80.67959378462798"
                  y1="357.75831390311475"
                  y2="364.2304498581143"
                />
              </g>
              <g
                class="recharts-layer recharts-polar-angle-axis-tick"
              >
                <line
                  class="angleAxis"
                  cx="200"
                  cy="200"
                  fill="none"
                  orientation="outer"
                  radius="195"
                  type="number"
                  x1="14.543979322445068"
                  x2="6.935527192083839"
                  y1="260.25831390311475"
                  y2="262.73044985811435"
                />
              </g>
              <g
                class="recharts-layer recharts-polar-angle-axis-tick"
              >
                <line
                  class="angleAxis"
                  cx="200"
                  cy="200"
                  fill="none"
                  orientation="outer"
                  radius="195"
                  type="number"
                  x1="14.54397932244504"
                  x2="6.935527192083811"
                  y1="139.74168609688527"
                  y2="137.2695501418857"
                />
              </g>
              <g
                class="recharts-layer recharts-polar-angle-axis-tick"
              >
                <line
                  class="angleAxis"
                  cx="200"
                  cy="200"
                  fill="none"
                  orientation="outer"
                  radius="195"
                  type="number"
                  x1="85.38187580296771"
                  x2="80.67959378462793"
                  y1="42.241686096885275"
                  y2="35.7695501418857"
                />
              </g>
              <g
                class="recharts-layer recharts-polar-angle-axis-tick"
              >
                <line
                  class="angleAxis"
                  cx="200"
                  cy="200"
                  fill="none"
                  orientation="outer"
                  radius="195"
                  type="number"
                  x1="199.99999999999997"
                  x2="199.99999999999997"
                  y1="5"
                  y2="-3"
                />
              </g>
            </g>
          </g>
          <g
            class="recharts-layer recharts-area"
          >
            <g
              class="recharts-layer recharts-radial-bar-background"
            >
              <path
                class="recharts-sector recharts-radial-bar-background-sector"
                cx="200"
                cy="200"
                d="M 200,20.25
    A 179.75,179.75,0,
    1,1,
    199.9968627706697,20.250000027377496
  L 199.9970373035949,30.250000025854405
            A 169.75,169.75,0,
            1,0,
            200,30.25 Z"
                fill="var(--sapContent_ImagePlaceholderBackground)"
                role="img"
              />
            </g>
            <g
              class="recharts-layer recharts-radial-bar-sectors"
            >
              <g
                class="recharts-layer"
              />
            </g>
          </g>
          <text
            class="progress-label"
            dominant-baseline="middle"
            style="font-size: 1.25rem; fill: var(--sapTextColor); font-family: var(--sapFontFamily);"
            text-anchor="middle"
            x="50%"
            y="50%"
          >
            67%
          </text>
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RadialChart Render chart with data 1`] = `
<DocumentFragment>
  <div
    class="ChartContainer-container"
  >
    <div
      class="recharts-responsive-container"
      style="width: 400px; height: 400px;"
    >
      <div
        class="recharts-wrapper"
        role="region"
        style="position: relative; cursor: default; width: 400px; height: 400px;"
      >
        <svg
          class="recharts-surface"
          cx="50%"
          cy="50%"
          height="400"
          version="1.1"
          viewBox="0 0 400 400"
          width="400"
        >
          <title />
          <desc />
          <defs>
            <clippath
              id="recharts1-clip"
            >
              <rect
                height="390"
                width="390"
                x="5"
                y="5"
              />
            </clippath>
          </defs>
          <g
            class="recharts-layer recharts-polar-angle-axis"
          >
            <path
              class="recharts-polygon angleAxis"
              cx="200"
              cy="200"
              d="M200,5L314.6181241970323,42.241686096885246L385.45602067755493,139.74168609688525L385.45602067755493,260.25831390311475L314.6181241970323,357.75831390311475L200,395L85.38187580296776,357.75831390311475L14.543979322445068,260.25831390311475L14.54397932244504,139.74168609688527L85.38187580296771,42.241686096885275L199.99999999999997,5L200,5Z"
              fill="none"
              orientation="outer"
              radius="195"
              type="number"
            />
            <g
              class="recharts-layer recharts-polar-angle-axis-ticks"
            >
              <g
                class="recharts-layer recharts-polar-angle-axis-tick"
              >
                <line
                  class="angleAxis"
                  cx="200"
                  cy="200"
                  fill="none"
                  orientation="outer"
                  radius="195"
                  type="number"
                  x1="200"
                  x2="200"
                  y1="5"
                  y2="-3"
                />
              </g>
              <g
                class="recharts-layer recharts-polar-angle-axis-tick"
              >
                <line
                  class="angleAxis"
                  cx="200"
                  cy="200"
                  fill="none"
                  orientation="outer"
                  radius="195"
                  type="number"
                  x1="314.6181241970323"
                  x2="319.32040621537203"
                  y1="42.241686096885246"
                  y2="35.769550141885674"
                />
              </g>
              <g
                class="recharts-layer recharts-polar-angle-axis-tick"
              >
                <line
                  class="angleAxis"
                  cx="200"
                  cy="200"
                  fill="none"
                  orientation="outer"
                  radius="195"
                  type="number"
                  x1="385.45602067755493"
                  x2="393.06447280791616"
                  y1="139.74168609688525"
                  y2="137.26955014188567"
                />
              </g>
              <g
                class="recharts-layer recharts-polar-angle-axis-tick"
              >
                <line
                  class="angleAxis"
                  cx="200"
                  cy="200"
                  fill="none"
                  orientation="outer"
                  radius="195"
                  type="number"
                  x1="385.45602067755493"
                  x2="393.06447280791616"
                  y1="260.25831390311475"
                  y2="262.73044985811435"
                />
              </g>
              <g
                class="recharts-layer recharts-polar-angle-axis-tick"
              >
                <line
                  class="angleAxis"
                  cx="200"
                  cy="200"
                  fill="none"
                  orientation="outer"
                  radius="195"
                  type="number"
                  x1="314.6181241970323"
                  x2="319.32040621537203"
                  y1="357.75831390311475"
                  y2="364.2304498581143"
                />
              </g>
              <g
                class="recharts-layer recharts-polar-angle-axis-tick"
              >
                <line
                  class="angleAxis"
                  cx="200"
                  cy="200"
                  fill="none"
                  orientation="outer"
                  radius="195"
                  type="number"
                  x1="200"
                  x2="200"
                  y1="395"
                  y2="403"
                />
              </g>
              <g
                class="recharts-layer recharts-polar-angle-axis-tick"
              >
                <line
                  class="angleAxis"
                  cx="200"
                  cy="200"
                  fill="none"
                  orientation="outer"
                  radius="195"
                  type="number"
                  x1="85.38187580296776"
                  x2="80.67959378462798"
                  y1="357.75831390311475"
                  y2="364.2304498581143"
                />
              </g>
              <g
                class="recharts-layer recharts-polar-angle-axis-tick"
              >
                <line
                  class="angleAxis"
                  cx="200"
                  cy="200"
                  fill="none"
                  orientation="outer"
                  radius="195"
                  type="number"
                  x1="14.543979322445068"
                  x2="6.935527192083839"
                  y1="260.25831390311475"
                  y2="262.73044985811435"
                />
              </g>
              <g
                class="recharts-layer recharts-polar-angle-axis-tick"
              >
                <line
                  class="angleAxis"
                  cx="200"
                  cy="200"
                  fill="none"
                  orientation="outer"
                  radius="195"
                  type="number"
                  x1="14.54397932244504"
                  x2="6.935527192083811"
                  y1="139.74168609688527"
                  y2="137.2695501418857"
                />
              </g>
              <g
                class="recharts-layer recharts-polar-angle-axis-tick"
              >
                <line
                  class="angleAxis"
                  cx="200"
                  cy="200"
                  fill="none"
                  orientation="outer"
                  radius="195"
                  type="number"
                  x1="85.38187580296771"
                  x2="80.67959378462793"
                  y1="42.241686096885275"
                  y2="35.7695501418857"
                />
              </g>
              <g
                class="recharts-layer recharts-polar-angle-axis-tick"
              >
                <line
                  class="angleAxis"
                  cx="200"
                  cy="200"
                  fill="none"
                  orientation="outer"
                  radius="195"
                  type="number"
                  x1="199.99999999999997"
                  x2="199.99999999999997"
                  y1="5"
                  y2="-3"
                />
              </g>
            </g>
          </g>
          <g
            class="recharts-layer recharts-area"
          >
            <g
              class="recharts-layer recharts-radial-bar-background"
            >
              <path
                class="recharts-sector recharts-radial-bar-background-sector"
                cx="200"
                cy="200"
                d="M 200,20.25
    A 179.75,179.75,0,
    1,1,
    199.9968627706697,20.250000027377496
  L 199.9970373035949,30.250000025854405
            A 169.75,169.75,0,
            1,0,
            200,30.25 Z"
                fill="var(--sapContent_ImagePlaceholderBackground)"
                role="img"
              />
            </g>
            <g
              class="recharts-layer recharts-radial-bar-sectors"
            >
              <g
                class="recharts-layer"
              />
            </g>
          </g>
          <text
            class="progress-label"
            dominant-baseline="middle"
            style="font-size: 1.25rem; fill: var(--sapTextColor); font-family: var(--sapFontFamily);"
            text-anchor="middle"
            x="50%"
            y="50%"
          >
            67%
          </text>
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
